--- a/js1k_1.html
+++ b/js1k_1.html
@@ -3,6 +3,11 @@
 <head>
 
 	<script>
+	/*
+		First entry: http://js1k.com/2010-first/
+		A two-plane raytracer. distance is taken into account, pseudo-xor texture
+	*/
+	
 	function load () {
 		
 		M = Math;
