--- a/js1k_3.html
+++ b/js1k_3.html
@@ -4,9 +4,9 @@
 
 <script>
 /*
-	First entry: http://js1k.com/2010-first/
-	A two-plane raytracer. distance is taken into account, pseudo-xor texture
-*/
+        Third entry: http://js1k.com/2011-dysentery
+        Metaballs over a simple grid.
+ */
 
 function load () {
 	
