--- a/js1k_3.html
+++ b/js1k_3.html
@@ -5,7 +5,7 @@
 <script>
 /*
         Third entry: http://js1k.com/2011-dysentery
-        Metaballs over a simple grid.
+        Metaballs over a simple grid with simple (on click) force modifier (badly tuned)
  */
 
 function load () {
